# novel-assistant

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.codebuddy/rules/: base.md  use-utils.md
.github/workflows/: build.yml
.husky/: pre-commit
.lingma/rules/: base.md  use-utils.md
docs/: DEVELOPMENT.md
scripts/: create-release-tag.js  create-release-tag.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250419000001_create_novels.sql  20250420000001_extend_tags.sql  20250420000002_seed_tags.sql  20250421000001_create_creation_states.sql  20260422000001_create_volumes_and_chapters.sql  20260428000001_create_chapter_versions.sql  20260428000002_create_ai_providers_and_models.sql  20260429000001_add_model_fetch_type_to_providers.sql  20260430000001_drop_default_params_from_ai_models.sql  20260501000001_create_ai_call_logs.sql  20260503000001_create_characters.sql  20260504000001_create_chapter_outlines.sql  20260504000002_add_plot_to_chapter_outlines.sql
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs  model_fetchers.rs  service.rs  types.rs
src-tauri/src/ai/actions/: context.rs  error.rs  executor.rs  handler.rs  mod.rs  router.rs
src-tauri/src/ai/actions/builtin/: generate_character.rs  generate_introduction.rs  generate_title.rs  mod.rs  optimize_character.rs  recommend_tags.rs
src-tauri/src/ai/prompts/: mod.rs
src-tauri/src/commands/: action_commands.rs  ai_commands.rs  chapter_commands.rs  chapter_outline_commands.rs  character_commands.rs  creation_state_commands.rs  mod.rs  model_commands.rs  novel_commands.rs  provider_commands.rs  tag_commands.rs
src-tauri/src/config/: env.rs  paths.rs
src-tauri/src/database/: error.rs  mod.rs  pool.rs
src-tauri/src/database/models/: ai_call_log.rs  chapter.rs  chapter_outline.rs  chapter_version.rs  character.rs  creation_state.rs  mod.rs  model.rs  novel.rs  provider.rs  tag.rs
src-tauri/src/database/repositories/: ai_call_log_repo.rs  ai_call_log_repo_impl.rs  chapter_outline_repo.rs  chapter_outline_repo_impl.rs  chapter_repo.rs  chapter_version_repo.rs  character_repo.rs  creation_state_repo.rs  mod.rs  model_repo.rs  novel_repo.rs  provider_repo.rs  tag_repo.rs
src-tauri/src/logging/: config.rs  mod.rs  setup.rs
src-tauri/src/utils/: README.md  macros.rs  mod.rs  pagination.rs
src-tauri/templates/: generate_character.tera  generate_introduction.tera  generate_title.tera  optimize_character.tera  recommend_tags.tera
src/components/: ChapterOutlineDrawer.tsx  EditVolumeItem.tsx  List.tsx  ModelSelect.tsx  PageLoading.tsx  ProviderSelect.tsx  WithAiAction.tsx
src/config/: index.ts  menu.config.ts  routes.config.ts  (+1 more)
(+82 files in other folders)
