[package]
name = "novel-assistant"
version = "0.1.0"
description = "小说创作助手桌面应用"
authors = ["橙续缘 <1287338537@qq.com>"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "novel_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1.20"
glob = "0.3"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }
async-trait = "0.1"
async-openai = "0.25"
reqwest = { version = "0.12", features = ["json"] }
rig-core = "0.7"
